--- a/blog/templates/blog/frontparts/header.html
+++ b/blog/templates/blog/frontparts/header.html
@@ -2,12 +2,12 @@
 <header class="header">
     <i class="fas fa-bars header__panel-button" id="js-header__panel-button"></i>
     {% if meta.slug and meta.slug != 'list' %}
-    <a class="header__title" href="{{ request.scheme }}://{{ request.get_host }}/blog/">tsux.me</a>
-    <span class="header__subtitle">〜 情報系学生の IT ブログ 〜</span>
+    <a class="header__title" href="{{ request.scheme }}://{{ request.get_host }}/">tsux.me</a>
+    <span class="header__subtitle">〜 学生エンジニアの IT ブログ 〜</span>
     {% else %}
     <h1 class="header__h1">
-        <a class="header__title" href="{{ request.scheme }}://{{ request.get_host }}/blog/">tsux.me</a>
-        <span class="header__subtitle">〜 情報系学生の IT ブログ 〜</span>
+        <a class="header__title" href="{{ request.scheme }}://{{ request.get_host }}/">tsux.me</a>
+        <span class="header__subtitle">〜 学生エンジニアの IT ブログ 〜</span>
     </h1>
     {% endif %}
 </header>
