--- a/portfolio/static/css/index.css
+++ b/portfolio/static/css/index.css
@@ -29,16 +29,15 @@ html {
 }
 
 .contents {
-  height: 100%;
+  height: 100vh;
+  overflow-y: scroll;
   padding: 70px 20px;
   width: 100%;
-  overflow-y: scroll;
 }
 
 .about {
-  height: 100%;
+  min-height: 100%;
   width: 100%;
-  padding: 10px;
 }
 
 .about__title {
@@ -74,9 +73,9 @@ html {
 }
 
 .work {
-  height: 100%;
+  min-height: 100%;
+  padding: 10px 0 0;
   width: 100%;
-  padding: 10px;
 }
 
 .work__title {
@@ -110,4 +109,22 @@ html {
   bottom: 0;
   height: 50px;
   z-index: 10;
+}
+
+@media (max-width:1000px) {
+
+  .header__subtitle {
+    display: none;
+  }
+
+  .header__title {
+    font-size: 22px;
+  }
+
+  .about,
+  .work {
+    height: auto;
+    padding: 20px 0;
+  }
+
 }
