--- a/blog/static/css/article-list.css
+++ b/blog/static/css/article-list.css
@@ -8,7 +8,10 @@
 
 .article-list__article-number {
     display: block;
+    color: #888;
+    font-size: 16px;
     text-align: right;
+    padding: 0 0 10px;
 }
 
 .article-list__thumb {
@@ -16,10 +19,17 @@
 }
 
 .article-list__title {
-    color: #333;
-    font-size: 20px;
-    line-height: 1.6;
-    padding: 5px 0 5px 20px;
+  color: #333;
+  font-size: 28px;
+  line-height: 1.6;
+  padding: 5px 0 5px 20px;
+}
+
+.article-list__item-title {
+  color: #333;
+  font-size: 20px;
+  line-height: 1.6;
+  padding: 5px 0 5px 10px;
 }
 
 .article-list__desc {
@@ -28,6 +38,27 @@
     line-height: 1.8;
     padding: 0 0 0 10px;
 }
+
+.list__page-nav {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 40px 20px 20px;
+  width: 100%;
+  text-align: center;
+}
+
+.list__page-nav-item {
+  display: inline-block;
+  background: #333;
+  border: 2px solid #888;
+  border-radius: 4px;
+  color: aliceblue;
+  line-height: 26px;
+  padding: 0 8px;
+  margin: 5px 2px;
+}
+
 
 @media (max-width:1000px) {
 
