--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,15 +1,40 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang = "ja">
-    {% include './frontparts/head.html' %}
-    <body>
-        {% include './frontparts/header.html' %}
-        {% include './frontparts/panel.html' %}
-        <section class="main">
-                {% block contents %}
-                {% endblock %}
-                {% include './frontparts/nav.html' %}
-        </section>
-        {% include './frontparts/footer.html' %}
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE = edge">
+    <meta name="viewport" content="width = device-width, initial-scale = 1">
+    <meta name="robots" content="index,follow">
+    <meta name="format-detection" content="email=no,telephone=no,address=no">
+    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
+    <!-- google fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&display=swap">
+    <!-- jquery -->
+    <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
+    <!-- general -->
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/marked.js' %}"></script>
+    <title>{{ title }} | tsux.me ブログ</title>
+  </head>
+  <body>
+    <header class="header">
+      <i class="fas fa-bars header__panel-button" id="js-header__panel-button"></i>
+      <h1 class="header__h1">
+        <a class="header__title" href="{{ request.scheme }}://{{ request.get_host }}/">tsux.me</a>
+        <span class="header__subtitle">ブログ</span>
+      </h1>
+    </header>
+    {% include './frontparts/panel.html' %}
+    <section class="main">
+      {% block contents %}
+      {% endblock %}
+      {% include './frontparts/nav.html' %}
+    </section>
+    <footer class="footer">
+      <span class="footer__copyright">©️ 2019 tsux</span>
+    </footer>
+  </body>
 </html>
