--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -3,19 +3,18 @@
 {% block contents %}
 <article class="article">
   <ul class="breadcrumb">
-    <li><a class="breadcrumb__item" href="{{ request.scheme }}://{{ request.get_host }}/blog/">TOP</a>
-    <li><a class="breadcrumb__item" href="{{ request.scheme }}://{{ request.get_host }}/blog/category/{{ article.category.slug }}/">{{ article.category.name }}</a>
-    <li><a class="breadcrumb__item breadcrumb__item--status_now">{{ article.title }}</a>
+    {% for item in breadcrumb %}
+    <li><a class="breadcrumb__item" href="{{ item.url }}">{{ item.name }}</a>
+    {% endfor %}
   </ul>
   <h1 class="article__title">{{ article.title }}</h1>
   <div class="article__flex">
     <span class="article__date-item">投稿日 {{ article.create_date }}</span>
     <span class="article__date-item">更新日 {{ article.update_date }}</span>
   </div>
-  <img class="article__thumb" src="{% if article.thumbnail %}{{ article.thumbnail.url }}{% else %}{% static 'img/default.jpg' %}{% endif %}" alt="{{ article.title }}">
-  <p class="article__desc">{{ article.description }}
+  {% if article.thumbnail %}
+  <img class="article__thumb" src="{{ article.thumbnail.url }}" alt="{{ article.title }}">
+  {% endif %}
   <div id="js-article__contents" class="article__contents">{{ article.contents | safe }}</div>
-  <!-- <nav class="page-nav">
-  </nav> -->
 </article>
 {% endblock %}
