--- a/blog/templates/blog/frontparts/nav.html
+++ b/blog/templates/blog/frontparts/nav.html
@@ -6,10 +6,10 @@
             <img class="nav__auth-img" src="{% static 'img/author.jpg' %}" alt="著者: tsux">
             <span class="nav__auth-name">tsux</span>
             <p class="nav__auth-desc">
-                tsux です。2000 年生まれ京大生です。
-                アルバイトでWEB開発のエンジニアをやっています。
-                最近参加させてもらった機械学習のハッカソンに影響を受けて機械学習の勉強中。
-                現在、Djangoでのサービス立ち上げや機械学習のフレームワーク作りなどを行なっています。
+                tsux です。2000年生まれの京大生です。
+                アルバイトでWEB開発のエンジニアをやってます。
+                最近参加した機械学習のハッカソンに影響を受けたこともあり、
+                Djangoでのサービス立ち上げや機械学習のフレームワーク作りなどに勤しんでます。
             </p>
             <ul class="nav__auth-sns">
                 <li><a class="nav__anchor" href="https://twitter.com/tsux2000"><i class="fab fa-twitter"></i> Twitter</a>
