--- a/blog/templates/blog/frontparts/nav.html
+++ b/blog/templates/blog/frontparts/nav.html
@@ -1,40 +1,43 @@
 {% load static %}
 <nav class="nav">
-    <div class="nav__item">
-        <span class="nav__title">AUTHOR</span>
-        <div class="nav__wrap">
-            <img class="nav__auth-img" src="{% static 'img/author.jpg' %}" alt="著者: tsux">
-            <span class="nav__auth-name">tsux</span>
-            <p class="nav__auth-desc">
-                tsux です。2000年生まれの京大生です。
-                アルバイトでWEB開発のエンジニアをやってます。
-                最近参加した機械学習のハッカソンに影響を受けたこともあり、
-                Djangoでのサービス立ち上げや機械学習のフレームワーク作りなどに勤しんでます。
-            </p>
-            <ul class="nav__auth-sns">
-                <li><a class="nav__anchor" href="https://twitter.com/tsux2000"><i class="fab fa-twitter"></i> Twitter</a>
-                <li><a class="nav__anchor" href="https://github.com/tsux2000"><i class="fab fa-github"></i> GitHub</a>
-            </ul>
-        </div>
+  <div class="nav__item">
+    <span class="nav__title">AUTHOR</span>
+    <div class="nav__wrap">
+      <img class="nav__auth-img" src="{% static 'img/author.jpg' %}" alt="著者: tsux">
+      <span class="nav__auth-name">tsux</span>
+      <p class="nav__auth-desc">
+        どうも tsux です。2000年生まれの大学生です。
+        アルバイトでWEBエンジニアをやってます。
+        最近はWEBサービス立ち上げや機械学習フレームワーク作りなんかをやってます。
+        料理、釣り、バスケ、株、起業、など多趣味なので
+        色んなことを記事にしていきたいです。
+      </p>
+      <ul class="nav__auth-sns">
+        <li><a class="nav__anchor" href="https://twitter.com/tsux2000"><i class="fab fa-twitter"></i> Twitter</a>
+        <li><a class="nav__anchor" href="https://github.com/tsux2000"><i class="fab fa-github"></i> GitHub</a>
+      </ul>
     </div>
-    <div class="nav__item">
-        <span class="nav__title">CATEGORY</span>
-        <ul class="nav__wrap">
-            {% for item in categories %}
-            <li>
-                <a class="nav__anchor" href="{{ request.scheme }}://{{ request.get_host }}/blog/category/{{ item.slug }}/">{{ item.name }}</a>
-            </li>
-            {% endfor %}
-            </ul>
-    </div>
-    <div class="nav__item">
-        <span class="nav__title">ARCHIVE</span>
-        <ul class="nav__wrap">
-            {% for item in dates %}
-            <li>
-                <a class="nav__anchor" href="{{ request.scheme }}://{{ request.get_host }}/blog/?archive={{ item.year }}-{{ item.month }}">{{ item.year }}年{{ item.month }}月</a>
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
+  </div>
+  <div class="nav__item">
+    <span class="nav__title">CATEGORY</span>
+    <ul class="nav__wrap">
+      {% for item in categories %}
+      {% if item.article_set.all %}
+      <li>
+        <a class="nav__anchor" href="{% url 'category' item.slug %}">{{ item.name }}</a>
+      </li>
+      {% endif %}
+      {% endfor %}
+      </ul>
+  </div>
+  <div class="nav__item">
+    <span class="nav__title">ARCHIVE</span>
+    <ul class="nav__wrap">
+      {% for item in dates %}
+      <li>
+        <a class="nav__anchor" href="{% url 'list' %}?archive={{ item.year }}_{{ item.month }}">{{ item.year }}年{{ item.month }}月</a>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
 </nav>
