--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -2,19 +2,6 @@
 {% load static %}
 {% block contents %}
 <article class="article">
-  <ul class="breadcrumb">
-    {% for item in breadcrumb %}
-    <li><a class="breadcrumb__item" href="{{ item.url }}">{{ item.name }}</a>
-    {% endfor %}
-  </ul>
-  <h1 class="article__title">{{ article.title }}</h1>
-  <div class="article__flex">
-    <span class="article__date-item">投稿日 {{ article.create_date }}</span>
-    <span class="article__date-item">更新日 {{ article.update_date }}</span>
-  </div>
-  {% if article.thumbnail %}
-  <img class="article__thumb" src="{{ article.thumbnail.url }}" alt="{{ article.title }}">
-  {% endif %}
-  <div id="js-article__contents" class="article__contents">{{ article.contents | safe }}</div>
+  <div class="md">{{ article.get_markdown | safe }}</div>
 </article>
 {% endblock %}
