--- a/blog/static/css/layout.css
+++ b/blog/static/css/layout.css
@@ -212,7 +212,7 @@
   padding: 10px 0;
   text-align: center;
   vertical-align: center;
-  padding: 0.5em 2em;
+  padding: 0.5em;
   border: solid 1px #ddd;
 }
 
