--- a/blog/templates/blog/frontparts/nav.html
+++ b/blog/templates/blog/frontparts/nav.html
@@ -6,11 +6,7 @@
       <img class="nav__auth-img" src="{% static 'img/author.jpg' %}" alt="著者: tsux">
       <span class="nav__auth-name">tsux</span>
       <p class="nav__auth-desc">
-        どうも tsux です。2000年生まれの大学生です。
-        アルバイトでWEBエンジニアをやってます。
-        最近はWEBサービス立ち上げや機械学習フレームワーク作りなんかをやってます。
-        料理、釣り、バスケ、株、起業、など多趣味なので
-        色んなことを記事にしていきたいです。
+        どうも tsux です。2000年生まれの大学生です。 アルバイトでWEBエンジニアをやってます。 最近はWEBサービス立ち上げや機械学習フレームワーク作りなんかを画策してます。 プログラミング、料理、釣り、バスケ、株、など多趣味なので色んなことを記事にしていきたいです。気づきましたか、、、そう、するとは言ってない。
       </p>
       <ul class="nav__auth-sns">
         <li><a class="nav__anchor" href="https://twitter.com/tsux2000"><i class="fab fa-twitter"></i> Twitter</a>
@@ -22,7 +18,7 @@
     <span class="nav__title">CATEGORY</span>
     <ul class="nav__wrap">
       {% for item in categories %}
-      {% if item.article_set.all %}
+      {% if item.article_set.count %}
       <li>
         <a class="nav__anchor" href="{% url 'category' item.slug %}">{{ item.name }}</a>
       </li>
