--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -1,12 +1,12 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang = "ja">
+<html lang="ja">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="index,follow">
-    <meta name="format-detection" content="email=no,telephone=no,address=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="robots" content="index, follow">
+    <meta name="format-detection" content="email=no, telephone=no, address=no">
     <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/18839ef28e.js" crossorigin="anonymous"></script>
@@ -27,10 +27,10 @@
     </script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_CHTML"></script>
     <!-- highlight -->
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/default.min.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/vs2015.min.css">
     <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
-    <title>{{ title }} | tsux.me</title>
+    <title>{{ meta.title }}</title>
   </head>
   <body>
     <header class="header">
