--- a/templates/blog/frontparts/nav.html
+++ b/templates/blog/frontparts/nav.html
@@ -6,15 +6,11 @@
       <img class="nav__auth-img" src="{% static 'img/author.jpg' %}" alt="著者: tsux">
       <span class="nav__auth-name">尽＠京大生エンジニア</span>
       <p class="nav__auth-desc">
-        尽（ tsux / ツクス ）と言います。
-        2000年生まれ。
-        京大の情報学科の2回生です。
-        学生エンジニアやってます。
-        プログラミングを教えるなどしようと思います。
-        賛否両論あるかと思いますが Python推し です。
-        Djangoが得意です。
-        機械学習とかも勉強中。
-        いろんなことを記事にしたいです。
+        尽（ tsux / ツクス ）と申します。
+        2000年生。京大情報学科2回生。学生エンジニアやってます。
+        Pythonを中心にWEB開発や機械学習等をやってます。
+        プログラミングを教える立場になるので、知識整理も兼ね、エンジニア向けの記事を中心に1日1本を目標に書きます。
+        Python が好きで、 Django が得意です。
       </p>
       <span class="nav__auth-name">SNS</span>
       <ul class="nav__auth-sns">
