--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -1,16 +1,8 @@
 
-.main {
-  display: flex;
-  justify-content: center;
-  min-height: calc(100vh - 49px);
-  padding: 70px 0 15px;
-  width: 100%;
-}
-
 .article {
   background: #fff;
   border-radius: 4px;
-  margin: 0 5px;
+  margin: 0 5px 20px;
   padding: 10px 30px;
   width: 760px;
 }
@@ -68,11 +60,6 @@
 }
 
 @media (max-width:1000px) {
-
-  .main {
-    display: block;
-    padding: 60px 0 0;
-  }
 
   .article {
     margin: 10px;
