--- a/assets/css/frontparts/nav.css
+++ b/assets/css/frontparts/nav.css
@@ -26,6 +26,12 @@
   text-align: center;
 }
 
+.nav__anchor {
+  color: #333;
+  border-bottom: 1px dotted #333;
+  line-height: 2.2;
+}
+
 .nav__auth-sns {
   display: flex;
   justify-content: space-around;
