Fix some template

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -11,7 +11,7 @@
           <p class="top-page__text">
             どうも、尽（ tsux / ツクス ）です。<br>
             学生ながらにエンジニアやらせてもらってます。<br>
-            この <a href="https://tsux.me/">tsux.me</a> は僕が作ったブログ、兼、ポートフォリオサイトです。<br>
+            この tsux.me は僕が作ったブログ、兼、ポートフォリオサイトです。<br>
             現役京大生エンジニアとしての経験や知識を記事にしてます。<br>
             主にエンジニア向けの記事。雑記・備忘録も少々。<br>
             くつろいでってください。<br>
