--- a/templates/blog/article.html
+++ b/templates/blog/article.html
@@ -14,8 +14,7 @@
     {% endif %}
     <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <a href="https://note.com/intent/social_button" class="note-social-button"
-      data-url="{% url 'article' object.slug %}"></a>
+    <a href="https://note.com/intent/social_button" class="note-social-button" data-url="{% url 'article' object.slug %}"></a>
     <script async src="https://cdn.st-note.com/js/social_button.min.js"></script>
   </div>
   <div class="comments">
