Fix style in pre

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -120,8 +120,7 @@
 .md pre {
   margin: 1em;
   white-space: pre;
-  white-space: pre-wrap;
-  word-wrap: break-word;
+  overflow: scroll;
 }
 
 .md code {
