--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -46,6 +46,9 @@
       {% include './frontparts/nav.html' %}
     </section>
     <footer class="footer">
+      <div class="footer__anchors">
+        <a href="{% url 'article' 'privacy_policy' %}" class="footer__anchor">プライバシーポリシー</a>
+      </div>
       <span class="footer__copyright">©️ 2020 tsux</span>
     </footer>
   </body>
