--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/vs2015.min.css">
     <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+    <script data-ad-client="ca-pub-8617325242122282" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>{{ meta.title }}</title>
   </head>
   <body>
